--- a/package.json
+++ b/package.json
@@ -3,13 +3,21 @@
   "version": "1.0.50",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "bun run --watch src/index.ts"
+    "dev": "bun run --watch src/index.ts",
+    "build": "bun build src/index.ts --target bun --outdir ./dist",
+    "prisma:push": "bunx prisma db push"
   },
   "dependencies": {
-    "elysia": "latest"
+    "@elysiajs/jwt": "^1.1.1",
+    "@prisma/client": "^5.21.0",
+    "elysia": "latest",
+    "pg": "^8.13.0",
+    "pg-hstore": "^2.3.4"
   },
   "devDependencies": {
-    "bun-types": "latest"
+    "@biomejs/biome": "1.9.4",
+    "bun-types": "latest",
+    "prisma": "^5.21.0"
   },
   "module": "src/index.js"
 }
