--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "bun run --watch src/index.ts",
-    "build": "bun build src/index.ts --target bun --outdir ./dist",
+    "build": "bun build --compile --target bun --outfile server ./src/index.ts",
     "prisma:push": "bunx prisma db push"
   },
   "dependencies": {
