--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "@elysiajs/jwt": "^1.1.1",
     "@prisma/client": "^5.21.0",
     "elysia": "latest",
+    "nodemailer": "^6.9.16",
     "pg": "^8.13.0",
     "pg-hstore": "^2.3.4"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
+    "@types/nodemailer": "^6.4.16",
     "bun-types": "latest",
     "prisma": "^5.21.0"
   },
