--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "prisma:push": "bunx prisma db push"
   },
   "dependencies": {
+    "@elysiajs/cors": "^1.1.1",
     "@elysiajs/jwt": "^1.1.1",
     "@prisma/client": "^5.21.0",
     "elysia": "latest",
