--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@elysiajs/cors": "^1.1.1",
     "@elysiajs/jwt": "^1.1.1",
     "@prisma/client": "^5.21.0",
+    "crypto": "^1.0.1",
     "elysia": "latest",
     "nodemailer": "^6.9.16",
     "pg": "^8.13.0",
